--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 		}
 
 		#counter {
-			margin-left: -120px;
+			margin-left: -106px;
 			position: absolute;
 			top: -98px;
 			left: 50%;
-			width: 240px;
+			width: 212px;
 			height: 196px;
 			visibility: visible;
 			text-align:center;
@@ -79,6 +79,15 @@
 			right:5px;
 		}
 
+		#seconds::after { content: ' s'; }
+		#minutes::after { content: ' m'; }
+		#hours::after   { content: ' h'; }
+		#days::after    { content: ' d'; }
+		#weeks::after   { content: ' w'; }
+		#months::after  { content: ' m'; }
+		#years::after   { content: ' y'; }
+
+
 		/*#counter.milestones div.on.year,#counter.milestones div.on.month,#counter.milestones div.on.day,#counter.milestones div.on.hour,#counter.milestones div.on.minute,#counter.milestones div.on.second {
 			background-color:rgb(249,38,114);
 		}*/
@@ -87,19 +96,19 @@
 <body>
 	<div id="horizon">
 		<div id="counter">
-			<div id="bit1"></div><div id="bit2"></div><div id="bit3"></div><div id="bit4"></div><div id="bit5"></div><div id="bit6"></div><div id="bit7"></div><div id="bit22"></div><div id="bit23"></div><div id="bit24"></div><div id="bit25"></div><div id="bit26"></div><div id="bit27" class="minute"></div><div id="bit8" class="year"></div><div id="bit21" class="hour"></div><div id="bit36"></div><div id="bit37"></div><div id="bit38"></div><div id="bit39"></div><div id="bit28"></div><div id="bit9"></div><div id="bit20"></div><div id="bit35"></div><div id="bit42"></div><div id="bit41"></div><div id="bit40"></div><div id="bit29"></div><div id="bit10"></div><div id="bit19"></div><div id="bit34"></div><div id="bit33" class="second"></div><div id="bit32"></div><div id="bit31"></div><div id="bit30"></div><div id="bit11"></div><div id="bit18" class="day"></div><div id="bit17"></div><div id="bit16"></div><div id="bit15"></div><div id="bit14"></div><div id="bit13"></div><div id="bit12" class="month"></div>
+			<div id="bit1"></div><div id="bit2"></div><div id="bit3"></div><div id="bit4"></div><div id="bit5"></div><div id="bit6"></div><div id="bit7"></div><div id="bit8" class="year"></div><div id="bit9"></div><div id="bit10"></div><div id="bit11"></div><div id="bit12" class="month"></div><div id="bit13"></div><div id="bit14"></div><div id="bit15"></div><div id="bit16"></div><div id="bit17"></div><div id="bit18" class="day"></div><div id="bit19"></div><div id="bit20"></div><div id="bit21" class="hour"></div><div id="bit22"></div><div id="bit23"></div><div id="bit24"></div><div id="bit25"></div><div id="bit26"></div><div id="bit27" class="minute"></div><div id="bit28"></div><div id="bit29"></div><div id="bit30"></div><!--<div id="bit31"></div><div id="bit32"></div><div id="bit33" class="second"></div><div id="bit34"></div><div id="bit35"></div><div id="bit36"></div><div id="bit37"></div><div id="bit38"></div><div id="bit39"></div><div id="bit40"></div><div id="bit41"></div><div id="bit42"></div>-->
 		</div>
 	</div>
 	<div id="info">
 		<div id="date"></div>
-		<a class="number" id="seconds" href="#0">0</a>
-		<a class="number" id="minutes" href="#0">0</a>
-		<a class="number" id="hours" href="#0">0</a>
-		<a class="number" id="days" href="#0">0</a>
-		<a class="number" id="weeks" href="#0">0</a>
-		<a class="number" id="months" href="#0">0</a>
-		<a class="number" id="years" href="#0">0</a>
-	</div>
+			<a class="number" id="seconds" href="#0">0</a>
+			<a class="number" id="minutes" href="#0">0</a>
+			<a class="number" id="hours" href="#0">0</a>
+			<a class="number" id="days" href="#0">0</a>
+			<a class="number" id="weeks" href="#0">0</a>
+			<a class="number" id="months" href="#0">0</a>
+			<a class="number" id="years" href="#0">0</a>
+		</div>
 	<div id="message"></div>
 </body>
 </html>
